// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormError renders correctly 1`] = `
<View>
  <View>
    <Text>
      Username or Password was incorrect
    </Text>
  </View>
  <View />
</View>
`;

exports[`Login renders correctly 1`] = `
<SafeAreaViewMock>
  <ScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/merkaba-green-on-white.png",
        }
      }
    />
    <Text>
      Log in to Hylo
    </Text>
    <View>
      <Text>
        Your email address
      </Text>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="next"
            underlineColorAndroid="transparent"
          />
        </View>
        <View />
      </View>
    </View>
    <View>
      <Text>
        Password
      </Text>
      <TouchableOpacity>
        <Text>
          Forgot your password?
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="go"
            secureTextEntry={true}
            selectTextOnFocus={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <View>
          <Icon
            allowFontScaling={false}
            name="eye"
            onPress={[Function]}
            size={12}
          />
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text>
          Log In
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <Text>
        Or connect with:
      </Text>
      <GoogleLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
      <FbLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
    </View>
    <SignupLink
      goToSignup={[Function]}
    />
  </ScrollView>
</SafeAreaViewMock>
`;

exports[`Login renders error message 1`] = `
<SafeAreaViewMock>
  <ScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/merkaba-green-on-white.png",
        }
      }
    />
    <Text>
      Log in to Hylo
    </Text>
    <View>
      <Text>
        Your email address
      </Text>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="next"
            underlineColorAndroid="transparent"
          />
        </View>
        <View />
      </View>
    </View>
    <View>
      <Text>
        Password
      </Text>
      <TouchableOpacity>
        <Text>
          Forgot your password?
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="go"
            secureTextEntry={true}
            selectTextOnFocus={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <View>
          <Icon
            allowFontScaling={false}
            name="eye"
            onPress={[Function]}
            size={12}
          />
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text>
          Log In
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <Text>
        Or connect with:
      </Text>
      <GoogleLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
      <FbLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
    </View>
    <SignupLink />
  </ScrollView>
</SafeAreaViewMock>
`;

exports[`Login renders with no network connection error 1`] = `
<SafeAreaViewMock>
  <ScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/merkaba-green-on-white.png",
        }
      }
    />
    <Text>
      Log in to Hylo
    </Text>
    <View>
      <Text>
        Your email address
      </Text>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="next"
            underlineColorAndroid="transparent"
          />
        </View>
        <View />
      </View>
    </View>
    <View>
      <Text>
        Password
      </Text>
      <TouchableOpacity>
        <Text>
          Forgot your password?
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="go"
            secureTextEntry={true}
            selectTextOnFocus={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <View>
          <Icon
            allowFontScaling={false}
            name="eye"
            onPress={[Function]}
            size={12}
          />
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text>
          Log In
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <Text>
        Or connect with:
      </Text>
      <GoogleLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
      <FbLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
    </View>
    <SignupLink />
  </ScrollView>
</SafeAreaViewMock>
`;

exports[`Login renders with pending banner 1`] = `
<SafeAreaViewMock>
  <ScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "justifyContent": "center",
      }
    }
  >
    <Text>
      LOGGING IN...
    </Text>
    <Image
      source={
        Object {
          "testUri": "../../../assets/merkaba-green-on-white.png",
        }
      }
    />
    <Text>
      Log in to Hylo
    </Text>
    <View>
      <Text>
        Your email address
      </Text>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="next"
            underlineColorAndroid="transparent"
          />
        </View>
        <View />
      </View>
    </View>
    <View>
      <Text>
        Password
      </Text>
      <TouchableOpacity>
        <Text>
          Forgot your password?
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <View>
        <View>
          <TextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            returnKeyType="go"
            secureTextEntry={true}
            selectTextOnFocus={true}
            underlineColorAndroid="transparent"
          />
        </View>
        <View>
          <Icon
            allowFontScaling={false}
            name="eye"
            onPress={[Function]}
            size={12}
          />
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text>
          Log In
        </Text>
      </TouchableOpacity>
    </View>
    <View>
      <Text>
        Or connect with:
      </Text>
      <GoogleLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
      <FbLoginButton
        createErrorNotification={[Function]}
        style={Object {}}
      />
    </View>
    <SignupLink />
  </ScrollView>
</SafeAreaViewMock>
`;

exports[`SignupLink renders correctly 1`] = `
<View>
  <Text>
    Dont have an account? 
  </Text>
  <TouchableOpacity
    onPress={[MockFunction]}
  >
    <Text>
      Sign up now
    </Text>
  </TouchableOpacity>
</View>
`;
